# jax-mppi

./: README.md  main.py  pyproject.toml
jax_mppi/: rollout.py  utils.py
jax_mppi/controllers/: __init__.py  base.py  cemppi.py  mppi.py
jax_mppi/environments/: pendulum.py
tests/: test_jax_mppi.py
video/: openaigym.episode_batch.0.38321.stats.json  openaigym.manifest.0.38321.manifest.json  openaigym.video.0.38321.video000000.meta.json
