[tool.poetry]
name = "jax_mppi"
version = "0.1.0"
description = "Model Predictive Path Integral (MPPI) control with JAX."
authors = ["jlehtomaa"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
gym = {extras = ["classic_control"], version = "^0.25.1"}
jaxlib = "^0.3.15"
jax = "^0.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
