[tool.poetry]
name = "jax_mppi"
version = "0.1.0"
description = "Model Predictive Path Integral (MPPI) control with JAX."
authors = ["jlehtomaa"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
numpy = "^1.23.1"
scipy = "^1.9.1"
gym = {extras = ["classic_control"], version = "^0.25.1"}
jaxlib = { version = "^0.3.15", source = "jax-html"}
jax = { version = "^0.3.15", source = "jax-html" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "jax-html"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "supplemental"